added back the express.static(public), updated documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -84,7 +84,7 @@
                     <td>Allows a user to update their personal information.</td>
                     <td>PUT</td>
                     <td>id (URL parameter)</td>
-                    <td>JSON object with updated user data (username, password, email, dateOfBirth)</td>
+                    <td>JSON object with updated user data</td>
                     <td>Confirmation message</td>
                 </tr>
                    <!-- Add Movie to Favorites -->
